# KiCad-MCP

./: .env.example  .gitignore  .mcp.dev.json  .mcp.json  CLAUDE.md  LESSONS_LEARNED.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  run.ps1  run.py  run.sh  run_plugin.ps1  run_plugin.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  integration.yml  pages.yml
docs/: _config.yml  configuration.md  index.md  installation.md  roadmap.md  tools.md
examples/: basic_usage.py  claude_desktop_config.json
examples/air_quality_sensor/: air_quality_sensor.kicad_pcb  air_quality_sensor.kicad_pro  air_quality_sensor.kicad_sch  build_schematic.py  sym-lib-table  test_tools.py
examples/air_quality_sensor/libs/: Sensors.kicad_sym
kicad_plugin/: CLAUDE.md  install_bridge.ps1  install_bridge.sh  kicad_mcp_bridge.py
launcher/: __init__.py  __main__.py  app.py  config.py  dashboard.py  launcher.ps1  orchestrator.py  processes.py  recents.py  settings.py  setup_core.py  status.py
launcher/ui/: index.html
scripts/: dev_server.ps1  dev_server.sh  mcp_health_monitor.ps1  mcp_health_monitor.py
src/: CLAUDE.md
src/kicad_mcp/: __init__.py  __main__.py  config.py  logging_config.py  server.py
src/kicad_mcp/backends/: __init__.py  base.py  cli_backend.py  composite.py  factory.py  file_backend.py  ipc_backend.py  ipc_connection.py  placement_guard.py  plugin_backend.py  subprocess_backend.py  swig_backend.py
src/kicad_mcp/models/: __init__.py  errors.py  types.py
src/kicad_mcp/resources/: __init__.py  definitions.py
src/kicad_mcp/tools/: __init__.py  board.py  drc.py  export.py  library.py  library_manage.py  manufacturing.py  parts.py  project.py  routing.py  schematic.py
src/kicad_mcp/utils/: __init__.py  board_size.py  change_log.py  fp_lib_table.py  gates.py  health_ui.py  keepout.py  kicad_paths.py  known_sources.py  library_sources.py  parts_index.py  pcbnew_helper.py  placement_config.py  placement_engine.py  placement_metrics.py  platform_helper.py  response_limit.py  sexp_parser.py  startup_state.py  units.py  validation.py  validation_cache.py
src/kicad_mcp/utils/source_ingesters/: __init__.py  _http.py  base.py  local_libs.py  octopart.py  snapmagic.py  ultra_librarian.py
src/kicad_mcp_plugin/: __init__.py  __main__.py  config.py  install_bridge.py  server.py
src/kicad_mcp_plugin/backends/: __init__.py  plugin_direct.py
tests/: conftest.py  test_auto_place_anchors.py  test_auto_place_clustering.py  test_auto_place_geometry.py  test_auto_place_size_gate.py  test_auto_place_strategy.py  test_autoroute_gate.py  test_board_remove_component.py  test_bridge_coherence.py  test_bridge_fp_lib_table.py  test_bridge_identity.py  test_check_courtyard_overlaps.py  test_cleanup_stale_files.py  test_clear_routes.py  test_clear_routes_bridge.py  test_cli_backend.py  test_composite.py  test_config.py  test_connect_pins_collision.py  test_design_rules_bridge_exempt.py  test_edge_overhang_gate.py  test_estimate_board_size.py  test_examples_orientations.py  test_export_dsn_fallback.py  test_export_pdf.py  test_factory.py  test_file_backend.py  test_fp_lib_table.py  test_freerouting_jar_compat.py  test_freerouting_reporting.py  test_freerouting_timeout_config.py  test_freerouting_timeout_result.py  test_identify_edge_facing_connectors.py  test_import_ses_fallback.py  test_ipc_backend.py  test_keepout.py  test_keepout_engine.py  test_kicad_python_detection.py  test_known_sources.py  test_label_edit_ops.py  (+66 more)
tests/fixtures/: sample_board.kicad_pcb  sample_project.kicad_pro  sample_schematic.kicad_sch
tests/fixtures/boards/: bt_audio_v1_before_connector_fix.kicad_pcb  ses_value_revert_v1.kicad_pcb  ses_value_revert_v1.ses
tests/fixtures/footprints/: Asymmetric_Test.kicad_mod  R_0402_1005Metric.kicad_mod  keepout_module.kicad_mod
tests/fixtures/footprints/TestPkg/: R_3pad.kicad_mod  R_4pad.kicad_mod  U_3pad_with_TP.kicad_mod
tests/fixtures/projects/: README.md
tests/fixtures/rotation_audit/: README.md  ground_truth.json  rotation_audit.kicad_sch
tests/fixtures/schematics/: clean.kicad_sch  extra_pads.kicad_sch  footprint_lib_missing.kicad_sch  pin_missing.kicad_sch  symbol_lib_missing.kicad_sch
tests/fixtures/symbols/: Device.kicad_sym  Regulator_Linear.kicad_sym  TestPkg.kicad_sym  power.kicad_sym
tests/integration/: README.md  conftest.py  run_integration_tests.py  test_aa_smoke.py  test_autoroute_autotune.py  test_autoroute_default10.py  test_bridge_basic.py  test_bridge_components.py  test_bridge_nets.py  test_bridge_placement.py  test_bridge_routing.py  test_ipc_live.py  test_keepout_live.py  test_placement_live.py  test_placement_metric_groundtruth.py  test_scratch_byte_exact.py  test_symbol_pin_rotation_live.py  test_usb4085_edge_place.py  test_zz_clear_routes.py
tests/integration/fixtures/: blank_board.kicad_pcb
