[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-mcp"
version = "0.1.0"
description = "Pure Python MCP server for KiCad EDA automation"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Evan Bonsignori" }]
keywords = ["kicad", "mcp", "eda", "pcb", "electronics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "fastmcp>=2.0,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "sexpdata>=1.0.0",
    "kicad-skip>=0.2.0",
]

[project.optional-dependencies]
ipc = ["kicad-python>=0.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
kicad-mcp = "kicad_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
