[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-mcp"
version = "0.1.0"
description = "Pure Python MCP server for KiCad EDA automation"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Evan Bonsignori" }]
keywords = ["kicad", "mcp", "eda", "pcb", "electronics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "fastmcp>=2.0,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "sexpdata>=1.0.0",
    "kicad-skip>=0.2.0",
    # IPC board backend (kipy). Import-guarded in backends/ipc_connection.py —
    # a missing/broken install degrades to the SWIG bridge / file paths.
    "kicad-python>=0.5.0,<0.6",
    "sniffio>=1.3",  # required by kipy's pynng transport; not declared upstream
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "watchfiles>=0.21",  # dev hot-reload server (scripts/dev_server.*)
]

[project.scripts]
kicad-mcp-plugin = "kicad_mcp_plugin.__main__:main"
kicad-mcp = "kicad_mcp_plugin.install_bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_mcp", "src/kicad_mcp_plugin"]

[tool.hatch.build.targets.wheel.force-include]
"kicad_plugin/kicad_mcp_bridge.py" = "kicad_mcp_plugin/data/kicad_mcp_bridge.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# tests/_tmp_pytest is an orphaned temp dir with a broken ACL (undeletable
# without elevation); collecting it aborts the whole run with PermissionError.
norecursedirs = ["_tmp_pytest"]
markers = [
    "integration: requires real KiCad pcbnew + bridge (set KICAD_INTEGRATION=1)",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Whole-repo run stays lenient + informational (CI `typecheck` job).
# Run: python -m mypy src/ to see current status.

# §6.9 — strict on the three "hot" files where frame-convention bugs surface,
# plus the F1 IPC board path (bridge-board-access spec §7).
# Enforced as a BLOCKING CI check (typecheck-strict). Reproduce locally with:
#   python -m mypy --strict src/kicad_mcp/tools/drc.py \
#       src/kicad_mcp/tools/board.py \
#       src/kicad_mcp_plugin/backends/plugin_direct.py \
#       src/kicad_mcp/backends/ipc_connection.py
[[tool.mypy.overrides]]
module = [
    "kicad_mcp.tools.drc",
    "kicad_mcp.tools.board",
    "kicad_mcp_plugin.backends.plugin_direct",
    "kicad_mcp.backends.ipc_connection",
    "kicad_mcp.backends.ipc_backend",
]
strict = true
